--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title></title>
-	<meta http-equiv="refresh" content="0; url=./mobow/" /><!--ta bort vid produktion-->
+	<meta http-equiv="refresh" content="0; url=./mobow/" />
 	<!--[if lt IE 9]>
 	<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
