--- a/mobow/index.html
+++ b/mobow/index.html
@@ -29,7 +29,7 @@
 </head>
 
 <body>
-<img src= "image/Mobow.PNG" id = "mobowpic">
+<img src= "image/Mobow.png" id = "mobowpic">
 <div id= "googleMap"></div>
 <div id= "info">
 hej
