--- a/mobow/index.html
+++ b/mobow/index.html
@@ -2,8 +2,9 @@
 <html>
 <head>
   <meta charset=utf-8 />
-  <title></title>
-  <link rel="stylesheet" type="text/css" media="screen" href="index.css" />
+  <title>Mobow</title>
+  <link rel="stylesheet" type="text/css" media="screen" href="css/index.css" />
+  <link rel="icon" type="image/png" size="64x64" href="image/icon.png"></link>
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
   <!--[if IE]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -25,7 +26,7 @@
  </script>
 </head>
 <body>
-  <img src= "image/Mobow.png" id = "mobowpic">
+  <img src="image/Mobow.png" alt="Mobow" id="mobowpic">
   <div id= "googleMap"></div>
   <div id= "info">
     hej
